Version 2.02.70 - 
================================
  Fix lvm shell crash when input is entirely whitespace.
  Update partial mode warning message.
  Preserve memlock balance in clvmd when activation triggers a resume.

Version 2.02.69 - 30th June 2010
================================
  Fix vgremove to allow removal of VG with missing PVs. (2.02.52)
  Add metadata/vgmetadatacopies to lvm.conf.
  Add --metadataignore to pvcreate and vgextend.
  Add vg_mda_copies, pv_mda_used_count and vg_mda_used_count to reports.
  Describe --vgmetadatacopies in lvm.conf and other man pages.
  Add --[vg]metadatacopies to select number of mdas to use in a VG.
  Make the metadata ignore bit control read/write metadata areas in a PV.
  Add pvchange --metadataignore to set or clear a metadata ignore bit.
  Refactor metadata code to prepare for --metadataignore / --vgmetadatacopies.
  Ensure region_size of mirrored log does not exceed its full size.
  Generate liblvm2app exported symbols from header file.
  Preload libc locale messages to prevent reading it in memory locked state.
  Fix handling of simultaneous mirror image and mirrored log image failure.

Version 2.02.68 - 23rd June 2010
================================
  Fix clvmd initscript status to print only active clustered LVs.
  Add lv_path to reports to offer full /dev pathname.
  Fix typo in warning message about missing device with allocated data areas.
  Add device name and offset to raw_read_mda_header error messages.
  Honour log argument when down-converting stacked mirror.
  Sleep to workaround clvmd -S race: socket closed early and server drops cmd.
  Use early udev synchronisation and update of dev nodes for clustered mirrors.
  Remove incorrect inclusion of kdev_t.h from cmirrord/functions.h.
  Add man pages for lvmconf and non-existent lvmsadc and lvmsar tools.
  Exit successfully when using -o help (but not -o +help) with LVM reports.
  Do not use internal DLM lock definitions in generic LVM2 clvmd code.