@@ -1,5 +1,6 @@
 Version 2.02.70 - 
 ================================
+  Remove superfluous suspended device counter from clvmd.
   Fix lvm shell crash when input is entirely whitespace.
   Update partial mode warning message.
   Preserve memlock balance in clvmd when activation triggers a resume.
